# dicebot

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: expressiontree.rs  main.rs  parser.rs
src/expressiontree/: mod.rs  roll.rs
