[package]
name = "dicebot"
version = "0.2.0"
authors = ["Kalle Rennes <kalle@kallerennes.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
pom = "3.1.0"
itertools = "0.8"

actix-web = "2.0"
actix-rt = "1.0"

env_logger = "0.7.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
